# novelos

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
config/: test_v31.yaml
docs/: v2.3-final-acceptance.md  v2.3-review-rework-summary.md  v2.3-rework-summary.md
docs/codex/: README.md  novel-content-factory-architecture.md  novel-factory-api-contract-guidelines.md  novel-factory-roadmap.md  novel-factory-v1-mvp-spec.md  novel-factory-v1-review-fix-spec.md  (+43 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
novel_factory/: __init__.py  api_app.py  cli.py  dispatcher.py
openclaw-agents/: .gitignore  CLAUDE.md  README.en.md  README.md
scripts/: v51_smoke_acceptance.sh
tests/: conftest.py  test_acceptance.py  test_agents.py  test_batch_production.py  test_cli.py  test_config_cli.py  test_dispatcher.py  test_file_size_policy.py  test_init_db_idempotency.py  test_llm_profiles.py  test_llm_router.py  test_p1_error_handling.py  test_packaging_resources.py  test_quality.py  test_qualityhub.py  test_repository.py  test_runtime.py  test_runtime_hardening.py  test_schemas.py  test_sidecar_agents.py  test_skill_config.py  test_skill_manifest.py  test_skill_package.py  test_skill_permissions.py  test_skills.py  test_skills_api.py  test_stability.py  test_state.py  test_v1_review.py  test_v2_1_cli.py  test_v2_2_cli.py  test_v2_3_cli.py  test_v2_3_review.py  test_v2_3_rework.py  test_v2_cli.py  test_v2_cli_integration.py  test_v31_error_envelope.py  test_v32_batch_revision.py  test_v33_batch_continuity_gate.py  test_v34_production_queue.py  (+58 more)
(+414 files in other folders)
